# infranetic

./: .ansible-lint  .editorconfig  .gitignore  .prettierrc.yaml  .prettierrc.yml  .yamllint  LICENSE.md  README.md  Vagrantfile  ansible.cfg  core.pkr.hcl  fedora-34.pkr.hcl  fedora-kickstart.cfg  fedora.pkr.hcl  galaxy.yaml  galaxy.yml  infranetic.pkr.hcl  kickstart.cfg  pyproject.toml  requirements-devel.txt  requirements-python.txt  requirements.txt  requirements.yml  sample.inventory.yml  setup-local.yml  setup-localhost.yml  setup-vagrant.yml  site.yaml  site.yml  tox.ini
.github/workflows/: build.yml  lint.yaml  lint.yml  test-hashistack-roles.yml  test-setup-roles.yml  validate-packer-template.yml
ansible/: .gitignore  README.md  ansible.cfg  requirements-ansible.yml  requirements.txt  requirements.yml  sample.inventory.yml  setup.yml  site-hashistack.yml  site-setup.yml  site.yml
ansible/hashistack-ansible/: requirements.yml  sample.inventory.yml  site.yml
ansible/setup-ansible/: README.md  ansible.cfg  requirements.txt  (+2 more)
apps/: README.md
common/: README.md
compute/: README.md  Vagrantfile  compute.json  compute.pkr.hcl
core/: README.md  Vagrantfile  core.pkr.hcl  requirements-ansible.yml  requirements-python.txt
group_vars/: all.yml
inventory/: vagrant.yaml
requirements/: ansible-lint.txt  ansible.txt  devel.txt  molecule.txt  tox.txt  yamllint.txt
terraform/: README.md
tools/: fedora-kickstart.cfg  fedora.pkr.hcl  requirements.yml  sample.inventory.yml  sample.manifest.json  setup-vagrant.yaml  setup-vagrant.yml  vagrant-manifest.sh
(+133 files in other folders)
