# SPDX-License-Identifier: ISC

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.poetry]
name = "infranetic"
version = "0.1.0"
description = ""
license = "ISC"
readme = "README.md"
repository = "https://github.com/jcmdln/infranetic"
authors = ["Johnathan C. Maudlin <jcmdln@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
ansible = ">=2.9"

[tool.poetry.dev-dependencies]
ansible-lint = "^5.3.2"
# bandit = "^1.7.1"
# black = "^21"
# flake8 = "^4.0.1"
# flake8-black = "^0.2.3"
# flake8-docstrings = "^1.6.0"
# flake8-isort = "^4.1.1"
# isort = "^5.10.1"
# jedi = "^0.18.1"
# memestra = "^0.2.0"
# mypy = "^0.910"
# pycodestyle = "^2.8.0"
# pydocstyle = "^6.1.1"
# pyflakes = "^2.4.0"
# pyls-flake8 = "^0.4.0"
# pyls-isort = "^0.2.2"
# python-lsp-black = "^1.0.1"
# python-lsp-server = "^1.3.2"
# rope = "^0.19.0"
tox = "^3.24.5"
yamllint = "^1.26.3"

#
# Extras
#

# [tool.black]
# line-length = 79

# [tool.isort]
# line_length = 79
# lines_between_types = 1
# profile = "black"
# remove_redundant_aliases = true
# wrap_length = 79
